--- a/index_ru.html
+++ b/index_ru.html
@@ -45,7 +45,11 @@
                 <button class="navbar-toggler first-button" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="animated-icon"><span></span><span></span><span></span></span>
+                    <span class="animated-icon">
+                        <span style="background-color: white;"></span>
+                        <span style="background-color: white;"></span>
+                        <span style="background-color: white;"></span>
+                    </span>
                 </button>
                 <!-- Collapsible content -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -116,7 +120,7 @@
                                             data-aos-anchor-placement="center-bottom">Ощутите волшебство рая водно-болотных угодий Намибии</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -134,7 +138,7 @@
                                             data-aos-anchor-placement="center-bottom">Следуйте за слонами</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -152,7 +156,7 @@
                                             data-aos-anchor-placement="center-bottom">Глубоко внутри дикой природы</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -171,7 +175,7 @@
                                             представитель человечества </div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -189,7 +193,7 @@
                                             data-aos-anchor-placement="center-bottom">Удивительный опыт</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -207,7 +211,7 @@
                                             data-aos-anchor-placement="center-bottom">Время исследовать дикую природу Африки</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -225,7 +229,7 @@
                                             data-aos-anchor-placement="center-bottom">Нетронутая среда</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -244,7 +248,7 @@
                                             опыт</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -262,7 +266,7 @@
                                             data-aos-anchor-placement="center-bottom">Достигните пункта назначения за пределами вашей мечты</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -280,7 +284,7 @@
                                             data-aos-anchor-placement="center-bottom">Удовольствие от исследования</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -298,7 +302,7 @@
                                             data-aos-anchor-placement="center-bottom">Почувствуйте красоту природы</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -316,7 +320,7 @@
                                             data-aos-anchor-placement="center-bottom">Где границы не могут вас удержать</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -334,7 +338,7 @@
                                             data-aos-anchor-placement="center-bottom">Самая древняя пустыня на Земле</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -352,7 +356,7 @@
                                             data-aos-anchor-placement="center-bottom">Где путешествие это приключение</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -370,7 +374,7 @@
                                             data-aos-anchor-placement="center-bottom">Удовольствие от исследования</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
@@ -388,7 +392,7 @@
                                             data-aos-anchor-placement="center-bottom">Там, где живет природа.</div>
                                         <a href="prom-detail_ru.html" data-aos="fade-up"
                                             data-aos-anchor-placement="center-bottom"
-                                            class="primary-btn no-bg large border-2 b-white white t-white">Обзор</a>
+                                            class="primary-btn no-bg  border-2 b-white white t-white">Обзор</a>
                                     </div>
                                 </div>
                                 <div class="gradient-overlay op-5"></div>
