--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="animated-icon">
-                        <span style="background-color: white;"></span>
-                        <span style="background-color: white;"></span>
-                        <span style="background-color: white;"></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </span>
                 </button>
                 <!-- Collapsible content -->
