--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="navbar-brand logo" href="#"><img src="assets\img\3palms.svg" style="margin-top: -10px;" alt="Exodus" class="img-fluid"></a>
 
                 <!-- Collapse button -->
-                <button class="navbar-toggler first-button" type="button" data-toggle="collapse"
+                <!-- <button class="navbar-toggler first-button" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="animated-icon">
@@ -49,7 +49,11 @@
                         <span></span>
                         <span></span>
                     </span>
-                </button>
+                </button> -->
+                <div class="langs">
+                    <a href="index_ru.html" style="text-decoration: none; color: black; font-weight: bold;">RU</a>
+                </div>
+
                 <!-- Collapsible content -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
