--- a/index_ru.html
+++ b/index_ru.html
@@ -42,7 +42,7 @@
                         style="margin-top: -10px;" alt="Exodus" class="img-fluid"></a>
 
                 <!-- Collapse button -->
-                <button class="navbar-toggler first-button" type="button" data-toggle="collapse"
+                <!-- <button class="navbar-toggler first-button" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="animated-icon">
@@ -50,7 +50,11 @@
                         <span></span>
                         <span></span>
                     </span>
-                </button>
+                </button> -->
+                <div class="langs">
+                    <a href="index.html" style="text-decoration: none; color: black; font-weight: bold;">EN</a>
+                </div>
+
                 <!-- Collapsible content -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
