--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                         <li class="nav-item">
                             <a class="nav-link " href="contact-page.html">Contacts</i></a>
                         </li> -->
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="index.html">EN</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="index_ru.html">RU</a>
                         </li>
@@ -682,6 +682,7 @@
                 <a href="promo-detail.html">Tour</a>
                 <a href="blog-page.html">Blog</a>
                 <a href="contact-page.html">Contacts</a> -->
+                <a href="#" style="color: gray;">2020 © 3Palms Kaza Eco Tours All Rights Reserved.</a>
             </div>
         </div>
     </footer>
