--- a/index_ru.html
+++ b/index_ru.html
@@ -76,9 +76,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">EN</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="index_ru.html">RU</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </nav>
@@ -682,6 +682,7 @@
                 <a href="promo-detail_ru.html">Тур</a>
                 <a href="blog-page_ru.html">Блог</a>
                 <a href="contact-page_ru.html">Контакты</a> -->
+                <a href="#" style="color: gray;">2020 © 3Palms Kaza Eco Tours Все права защищены.</a>
             </div>
         </div>
     </footer>
